# vulkan_glasses_for_robots

./: README.md  dependencies.rosinstall  dependencies_https.rosinstall
docker/: Dockerfile  run_docker.sh
vrglasses_for_robots/: CMakeLists.txt  package.xml
vrglasses_for_robots/include/vrglasses_for_robots/: vulkan_renderer.h
vrglasses_for_robots/launch/: visim_demo.launch
vrglasses_for_robots/shaders/: vrglasses4robots_shader.frag.spv  vrglasses4robots_shader.vert.spv
vrglasses_for_robots/src/: fs_main.cc  visim_processor.cc  vulkan_renderer.cc
vrglasses_for_robots_ros/: CMakeLists.txt  package.xml
vrglasses_for_robots_ros/cfg/: vins_mono_sim.yaml
vrglasses_for_robots_ros/configs/: config_baseball_stadium.yaml  config_baxall.yaml  config_buffallo_construction_site.yaml  config_construction_site.yaml  config_essex_castle.yaml  config_fire_training_center.yaml  config_five_skyscrapers.yaml  config_fraser_gunny_range.yaml  config_garden_of_eden.yaml  config_hartly_mansion.yaml  config_heritage_library.yaml  config_hofdi_house.yaml  config_hospital.yaml  config_house_garden.yaml  config_random_terrian_1.yaml  config_rochester_warenhouse.yaml  config_small_mill.yaml  config_tin_hau_temple.yaml  config_wood_island.yaml  config_xcell_aerial_hq.yaml
vrglasses_for_robots_ros/include/vrglasses_for_robots_ros/: vrglasses_node.h
vrglasses_for_robots_ros/launch/: dynamic_model_example.launch  multi_camera_example.launch  multiple_model_example.launch  orthographic_mesh_rendering.launch  segments_model_example.launch  simple_example.launch  vins_test.launch  visim_demo-visim.launch  visim_demo.launch
vrglasses_for_robots_ros/models/: example_model_def_list.txt  example_model_poses_list.txt  repository_address.txt  sg_model_def_list.txt  sg_model_poses_list.txt
vrglasses_for_robots_ros/scripts/: ortho_model_top_view.py  path_publisher.py  path_publisher_pix4d.py  pose_publisher.py  pose_publisher_fabiola.py  pose_publisher_landing_path.py  pose_publisher_positions.py  pose_publisher_positions_and_orientations.py  pose_publisher_transformations.py  pose_publisher_viewpoints.py  pose_publisher_viewpoints_circle_fab.py  pose_publisher_viewpoints_circle_training.py  pose_publisher_viewpoints_ncircles_fab.py  pose_publisher_viewpoints_sphere_random.py  pose_publisher_viewpoints_star.py  test_ortho_model_top_view.py
vrglasses_for_robots_ros/src/: ros_main.cc  vrglasses_node.cc
