<package>
  <name>vrglasses_for_robots</name>
  <version>0.1.0</version>
  <description>Vulkan renderer for ros</description>

  <maintainer email="lteixeira@mavt.ethz.ch">Lucas Teixeira</maintainer>

  <license>None</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <build_depend>mav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>minkindr</build_depend>
<build_depend>cv_bridge</build_depend>



  <run_depend>mav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>gazebo_ros</run_depend>
<run_depend>cv_bridge</run_depend>


</package>
