<?xml version="1.0"?>
<package format="2">
  <name>vrglasses_for_robots_ros</name>
  <version>0.1.0</version>
  <description>Vulkan renderer for ros</description>

  <maintainer email="lteixeira@mavt.ethz.ch">Lucas Teixeira</maintainer>

  <license>None</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>mav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>minkindr</depend>
  <depend>minkindr_conversions</depend>
  <depend>cv_bridge</depend>
  <depend>vrglasses_for_robots</depend>  
  <depend>image_transport</depend>
</package>
